--- a/Voltage_Monitor/ADCMonitor/ADCMonitor/MainWindow.xaml
+++ b/Voltage_Monitor/ADCMonitor/ADCMonitor/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ADCMonitor"
         mc:Ignorable="d"
+        DataContext="{StaticResource Locator}"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Test" Command="{Binding Main.TestCommand}"/>
     </Grid>
 </Window>
