--- a/Voltage_Monitor/ADCMonitor/ADCMonitor/View/ADCMonitorView.xaml
+++ b/Voltage_Monitor/ADCMonitor/ADCMonitor/View/ADCMonitorView.xaml
@@ -4,6 +4,7 @@
                 xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 DataContext="{Binding ADCMonitorVM, Source={StaticResource Locator}}"
+                
                 Initialized="Page_Initialized"
       >
     <Grid>
@@ -19,8 +20,8 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <ScrollBar Value="{Binding XOffset, UpdateSourceTrigger=PropertyChanged}" Orientation="Horizontal" Grid.Row="0"/>
-                <telerik:RadSlider Height="15" Width="150" HorizontalAlignment="Right" telerik:StyleManager.Theme="Crystal" Grid.Row="1"/>
+                <ScrollBar Value="{Binding XOffset, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding XOffsetMax}" Minimum="0" Orientation="Horizontal" Grid.Row="0"/>
+                <telerik:RadSlider Value="{Binding TUPValue}" Minimum="{Binding MinTUP}" Maximum="{Binding MaxTUP}" Height="15" Width="150" HorizontalAlignment="Right" telerik:StyleManager.Theme="Crystal" Grid.Row="1"/>
             </Grid>
             <Border x:Name="waveformBorder" SizeChanged="WaveformBorder_SizeChanged" BorderThickness="0.0" BorderBrush="Gray">
                 <Image x:Name="waveformImage" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
