--- a/Voltage_Monitor/ADCMonitor/ADCMonitor/View/MainWindow.xaml
+++ b/Voltage_Monitor/ADCMonitor/ADCMonitor/View/MainWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="ADCMonitor.MainWindow"
+﻿<Window x:Class="ADCMonitor.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
+        xmlns:local="clr-namespace:ADCMonitor.View"
         mc:Ignorable="d"
-        DataContext="{StaticResource Locator}"
-        Title="MainWindow" Height="450" Width="800">
-    <Frame Initialized="MainFrame_Initialized" x:Name="mainFrame" NavigationUIVisibility="Hidden"/>
+        Title="MainWindow" Height="600" Width="800">
+    <Grid>
+        <Frame x:Name="mainFrame" Initialized="mainFrame_Initialized" />
+    </Grid>
 </Window>
