--- a/Voltage_Monitor/ADCMonitor/ADCMonitor/View/MainWindow.xaml
+++ b/Voltage_Monitor/ADCMonitor/ADCMonitor/View/MainWindow.xaml
@@ -8,11 +8,23 @@
         mc:Ignorable="d" Initialized="Window_Initialized"
         Title="MainWindow" MinHeight="600" MinWidth="800">
     <Grid>
-        <telerik:RadNavigationView x:Name="navigationView" PaneHeader="RadNavigationView" SelectedIndex="1">
+        <telerik:RadNavigationView x:Name="navigationView" PaneHeader="RadNavigationView" IsPaneOpen="False"  SelectedIndex="1">
             <telerik:RadNavigationView.Items>
-                <telerik:RadNavigationViewItem Content="Overview" Click="RadNavigationViewItem_Click"/>
-                <telerik:RadNavigationViewItem Content="Monitor" Click="RadNavigationViewItem_Click"/>
-                <telerik:RadNavigationViewItem Content="Debug" Click="RadNavigationViewItem_Click"/>
+                <telerik:RadNavigationViewItem Content="Overview" Click="RadNavigationViewItem_Click">
+                    <telerik:RadNavigationViewItem.Icon>
+                        <Path Margin="5" Stretch="Uniform" Data="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z" Fill="White"/>
+                    </telerik:RadNavigationViewItem.Icon>
+                </telerik:RadNavigationViewItem>
+                <telerik:RadNavigationViewItem Content="Monitor" Click="RadNavigationViewItem_Click">
+                    <telerik:RadNavigationViewItem.Icon>
+                        <Path Margin="5" Stretch="Uniform" Data="M9.96,11.31C10.82,8.1 11.5,6 13,6C14.5,6 15.18,8.1 16.04,11.31C17,14.92 18.1,19 22,19V17C19.8,17 19,14.54 17.97,10.8C17.08,7.46 16.15,4 13,4C9.85,4 8.92,7.46 8.03,10.8C7.03,14.54 6.2,17 4,17V2H2V22H22V20H4V19C7.9,19 9,14.92 9.96,11.31Z" Fill="White"/>
+                    </telerik:RadNavigationViewItem.Icon>
+                </telerik:RadNavigationViewItem>
+                <telerik:RadNavigationViewItem Content="Debug" Click="RadNavigationViewItem_Click">
+                    <telerik:RadNavigationViewItem.Icon>
+                        <Path Margin="5" Stretch="Uniform" Data="M20,8H17.19C16.74,7.2 16.12,6.5 15.37,6L17,4.41L15.59,3L13.42,5.17C12.96,5.06 12.5,5 12,5C11.5,5 11.05,5.06 10.59,5.17L8.41,3L7,4.41L8.62,6C7.87,6.5 7.26,7.21 6.81,8H4V10H6.09C6.03,10.33 6,10.66 6,11V12H4V14H6V15C6,15.34 6.03,15.67 6.09,16H4V18H6.81C8.47,20.87 12.14,21.84 15,20.18C15.91,19.66 16.67,18.9 17.19,18H20V16H17.91C17.97,15.67 18,15.34 18,15V14H20V12H18V11C18,10.66 17.97,10.33 17.91,10H20V8M16,15A4,4 0 0,1 12,19A4,4 0 0,1 8,15V11A4,4 0 0,1 12,7A4,4 0 0,1 16,11V15M14,10V12H10V10H14M10,14H14V16H10V14Z" Fill="White"/>
+                    </telerik:RadNavigationViewItem.Icon>
+                </telerik:RadNavigationViewItem>
             </telerik:RadNavigationView.Items>
             <telerik:RadNavigationView.Content>
                 <Frame x:Name="mainFrame"/>
