Updated ADC Monitor
1.Debug工具移置新的視窗中
2.將DebugWindow做快捷鍵
3.DrawingWaveformService位置移動App
4.數據的操作從Memory改成File

1.Move the Debug tool to a new window
2.Add a shortcut key for the DebugWindow
3.Move the DrawingWaveformService location to the App
4.Change the data operation from Memory to File.

--- a/Voltage_Monitor/ADCMonitor/ADCMonitor/View/MainWindow.xaml
+++ b/Voltage_Monitor/ADCMonitor/ADCMonitor/View/MainWindow.xaml
@@ -7,6 +7,9 @@
         xmlns:local="clr-namespace:ADCMonitor.View"
         mc:Ignorable="d" Initialized="Window_Initialized"
         Title="MainWindow" MinHeight="600" MinWidth="800">
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding Path=Main.DebugWindowRelayCommand, Source={StaticResource Locator}}" Gesture="Ctrl+Alt+D"/>
+    </Window.InputBindings>
     <Grid>
         <telerik:RadNavigationView x:Name="navigationView" PaneHeader="RadNavigationView" IsPaneOpen="False"  SelectedIndex="1">
             <telerik:RadNavigationView.Items>
